# tts_text

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
config/: config.yaml
data/raw/: phonemes.json
src/scripts/: build_tts_dataset.py  fix_dot_env_file.py  make_phoneme_covering.py  make_wiki_phoneme_covering.py  manually_filter_reddit_comment.py  manually_filter_reddit_comments.py  your_script.py
src/tts_text/: __init__.py  borger_dk.py  bus_stops_and_stations.py  dates.py  lex.py  make_phoneme_covering_set.py  phoneme_covering.py  phoneme_covering_set.py  reddit.py  sort_wiki_by_phoneme_occurence.py  sundhed_dk.py  times.py  utils.py
tests/: conftest.py  test_bus_stops_and_stations.py  test_dates.py  test_lex.py  test_phoneme_covering.py  test_times.py  test_utils.py
