[tool.poetry]
name = "tts_text"
version = "0.0.0"
description = "Code for collection/generation of text for tts data collection"
authors = [
    "Anders Jess Pedersen <anders.j.pedersen@alexandra.dk>",
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hydra-core = "^1.3.2"
lxml = "^4.9.3"
pandas = "^2.0.0"
datasets = "^2.14.6"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"
pdoc = "^14.0.1"
readme-coverage-badger = ">=0.1.2,<1.0.0"
click = "^8.1.7"

[[tool.poetry.source]]
name = "pypi"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/tts_text',
    '-n 8',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
]
log_cli_level = "info"
testpaths = ["tests", "src/tts_text"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.ruff]
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
